# sdl-engine-libs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AppEvents/: CMakeLists.txt
AppUtils/include/AppUtils/: Clock.h  Enum.h
CppUtils/: .gitignore  CMakeLists.txt  README.md
CppUtils/code/: CMakeLists.txt
CppUtils/code/include/cpp-utils/: Assert.h  Identifier.h  Identifier.inl  Log.h  Placeholder.h  Signal.h  Signal.inl
CppUtils/code/include/cpp-utils/Compiler/: Warning.h
CppUtils/scripts/: gen_proj.bat
CppUtils/test/: CMakeLists.txt
CppUtils/test/src/: IdentifierParamTests.cpp  SignalTests.cpp
GameGraphics/: CMakeLists.txt
GameGraphics/include/Game/Graphics/: Color.h  Renderer2D.h  SpriteAtlasProvider.h  TextureMgr.h
GameGraphics/source/Game/Graphics/: Display.cpp  TextRenderer.cpp
Graphics/: CMakeLists.txt
Graphics/include/Graphics/: BasicTextRenderer.h  Glyphs.h
Graphics/source/Graphics/: Glyphs.cpp  SpriteAtlasConfig.cpp
Math/: CMakeLists.txt
Math/include/Math/: Vector-inl.h  Vector.h
Math/source/Math/: Vec2f.cpp  Vec3f.cpp  Vec3u8.cpp  Vec4f.cpp  Vec4i32.cpp
SDLSupport/: CMakeLists.txt
SDLSupport/include/SDL/: Renderer.h  Types.h
SDLSupport/include/SDL/Policy/: EventDispatch.h  Initialization.h
SDLSupport/source/SDL/: Display.cpp  TextureFactory.cpp
SDLSupport/source/SDL/Policy/: GraphicsProvider.cpp  Initialization.cpp
SpaceInvadersEngine/: CMakeLists.txt
SpaceInvadersEngine/source/Game/Base/Assets/: Fonts.cpp  Fonts.h  Sprites.cpp  Sprites.h  Textures.h
SpaceInvadersEngine/source/Game/LegacyEngine/: SDLEngine.h
app/assets/: unifont-64.font
app/assets/sprites/: invaders-64.sprites
scripts/: README.md  clear_projects.bat  gen_proj-SDL.bat
scripts/cmake/: utils.cmake
scripts/cmd/: CreateAndStartProject.bat  GenerateVSSolution.bat  Notification.bat
scripts/proj-llvm/: clear_project.bat  gen_proj-llvm.bat  start_proj-llvm.bat
scripts/proj-vsc/: clear_project.bat  gen_proj-vsc.bat  start_proj-vsc.bat
src/: CMakeLists.txt
src/AppEvents/include/AppEvents/: Events.h  IEventHandler.h
src/AppUtils/: CMakeLists.txt
src/AppUtils/source/AppUtils/: Clock.cpp
src/GameGraphics/include/Game/Graphics/: Display.h  Font.h  Renderer2D-inl.h  SpriteAtlas.h  SpriteAtlasProvider.h  SpriteRenderer.h  TextRenderer.h  TextureProvider.h
src/GameGraphics/source/Game/Graphics/: Color.cpp  Renderer2D.cpp  SpriteAtlas.cpp  SpriteAtlasProvider.cpp  SpriteRenderer.cpp  TextureMgr.cpp  TextureProvider.cpp
src/Graphics/include/Graphics/: BasicTextRenderer-inl.h  Glyphs.h  SpriteAtlasConfig.h
src/Math/include/Math/: Vector-inl.h  Vector.h
src/Math/source/Math/: Vec2i32.cpp  Vec2u32.cpp  Vec3i32.cpp  Vec3u32.cpp  Vec4u32.cpp  Vec4u8.cpp
src/SDLEngine/: CMakeLists.txt
src/SDLSupport/: CMakeLists.txt
src/SDLSupport/include/SDL/: Display.h  Texture.h  TextureFactory.h  Timer.h
src/SDLSupport/include/SDL/Policy/: GraphicsProvider.h
src/SDLSupport/source/SDL/: Renderer.cpp  Texture.cpp  Timer.cpp  Window.cpp  Window.h
src/SDLSupport/source/SDL/Policy/: EventDispatch.cpp
src/SpaceInvadersEngine/: CMakeLists.txt
src/SpaceInvadersEngine/include/Game/LegacyEngine/: SpaceInvadersEngine.h
src/SpaceInvadersEngine/source/Game/Base/Assets/: Textures.cpp
src/SpaceInvadersEngine/source/Game/LegacyEngine/: SDLEngine.cpp  SDLEngine.h  SpaceInvadersEngine.cpp
tools/FontTool-master/: Credits.txt  FontTool.py  GenFonts.bat  GenSprites.bat  README.mdown
tools/FontTool-master/sprites/: README.md  invaders.json
